# nerf

./: .flake8  .gitignore  CLAUDE.md  MOREWORK.md  README.md  TODO.md  docker-compose.yml  new-start-nerf.ps1  pyproject.toml  requirements.txt  start_nerf.bat
nerf-admin/: nerf-admin.py  nerfdb-setup.sql  test-db.py  update-credits-reset.sql
nerf-gun-control/: channel-followers.py  fastshooter.py  get-tokens.py  main.py  nerf_controller.py  params.py  reqlogger.py  test_nerf_controller.py
nerf-gun-control/test/: test_nerf_controller_integration.py
nerf-gun-simluator/: simulator.py
streamerbot/: FireCommandHnadler.cs
wp-content/pages/: page-nerf-config.php  page-subscriber-management.php
wp-content/plugins/: nerf-gun-db-operations.php  nerfbot-api.php  subscriber-db-operations.php
wp-content/plugins/js/: subscriber-management.js
